# promopilot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html
.githooks/: post-commit
.github/workflows/: pages.yml
assets/: index-55yMYTyi.css  index-DAnzAFSo.js
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: cache.py  config.py  logging.py
backend/app/ml/: data_schema.py  dr_estimator.py  export_static_recommendations.py  policy.py  synth_data.py  train.py
backend/tests/: test_dr_estimator.py  test_policy_api.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/mock/: recommendations.json
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: BeforeAfterStrip.tsx  Controls.tsx  DoseResponseChart.tsx  ErrorBoundary.tsx  PolicyCard.tsx  TogglePill.tsx
frontend/src/pages/: Home.tsx
frontend/tests/: e2e.spec.ts
