[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promopilot-backend"
version = "0.1.0"
description = "PromoPilot counterfactual discount optimizer backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "scikit-learn>=1.5,<2.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "pyarrow>=17.0,<20.0",
  "joblib>=1.4,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
  "pytest-timeout>=2.3,<3.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
timeout = 30

[tool.setuptools.packages.find]
include = ["app*"]
